# ChangeLog for media-sound/ogreal
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> ogreal-9999.ebuild:
  eautoreconf dies on its own with a more useful message

  19 Feb 2008; Jakub Moc <jakub@gentoo.org> ogreal-9999.ebuild:
  Fix DEPEND

  15 Feb 2008; (Tommy[D]) tommy100@gmx.de ogreal-9999.ebuild:
  Cleanup

  11 Feb 2008; Christoph Brill (egore) egore@gmx.de +metadata.xml,
  +ogreal-9999.ebuild:
  New Ebuild for bug 209716
