@@ -1,3 +1,3 @@
-EBUILD ogreal-9999.ebuild 614 RMD160 ad9f344a8f8814025f0bf27366b80504f5257b67 SHA1 108da8b05d8b5bdae9d408b2038c0a1a790fc29f SHA256 b9b8341ab30d36e4b84bff823152ce235dc0abd868825d9759062165b6a7647d
-MISC ChangeLog 523 RMD160 c2b0c86f68650e07cb0420d5b3eba34d28427013 SHA1 f684024b6321fa7038f70a3bb3809777e539efb8 SHA256 9a3262e4b5f432e5d38dfd127cf43bcfea7c9a0e7be7b79e3b22d3a3180e5c42
+EBUILD ogreal-9999.ebuild 608 RMD160 c3cb30feb4c2617d1e2442f49e99ec47514d5030 SHA1 94ec6b236610c0290c2a1732c1402460837c61a4 SHA256 22d8f92e069d78685b1b93572253ff3c7ecfcb95e5f7d4bebbdc0c387c293c7b
+MISC ChangeLog 676 RMD160 8e5eef716d63ee43ffc84b629de924b0243ffe41 SHA1 2acee699ecd12592e5015f2b190073cad0918662 SHA256 ffe878120e12e77b8325ebc1a99c3604fe2be2cfda807df1c9210f2ac064eb57
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
