@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/ogreal
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  ogreal-9999.ebuild:
+  Add suggested RDEPEND=${DEPEND}, use ESVN_BOOTSTRAP, drop src_unpack
 
   04 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> ogreal-9999.ebuild:
   eautoreconf dies on its own with a more useful message
